@@ -1,6 +1,7 @@
 Gepi-master -- Procédure d'installation
 ==========================================
 
+Version de développement: NE PAS INSTALLER EN PRODUCTION !
 La branche stable actuelle est la 1.6.6
 
 ****************************************************
